Add non-working menubar settings page

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -48,14 +48,10 @@
 					</ul>
 					<br>
 					<h3><i class="fa fa-globe"></i> Services</h3>
-					<ul>
-						<li>Someone who is good at javascript will put some services here and get rid of this annoying message.</li>
-						<li><h3>TODO:</h3></li>
-						<li>Lunch Menu</li>
-						<li>Schedule</li>
-						<li>Wolfram|Aplha</li>
-						<li>Weather</li>
-					</ul>
+					Lunch Menu
+					Schedule
+					Wolfram|Alpha
+					Weather
 					<br>
 					<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
 					<ul>
