Make menubar options work

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -43,24 +43,31 @@
 			</div>
 			<div id="mainPage" class="page">
 				<div class="content">
-					<h3><i class="fa fa-clock-o"></i> Upcoming events</h3>
-					<ul id="upcomingEventList">
-					</ul>
-					<br>
-					<h3><i class="fa fa-globe"></i> Services</h3>
-					Lunch Menu
-					Schedule
-					Wolfram|Alpha
-					Weather
-					<br>
-					<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
-					<ul>
-						<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
-						<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
-						<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
-						<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
-						<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
-					</ul>
+					<div id="upcomingEvents">
+						<h3><i class="fa fa-clock-o"></i> Upcoming events</h3>
+						<ul id="upcomingEventList">
+							<li>Loading...</li>
+						</ul>
+					</div>
+					
+					<div id="services">
+						<h3><i class="fa fa-globe"></i> Services</h3>
+						Lunch Menu
+						Schedule
+						Wolfram|Alpha
+						Weather
+					</div>
+					
+					<div id="quickLinks">
+						<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
+						<ul>
+							<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
+							<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
+							<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
+							<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
+							<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
+						</ul>
+					</div>
 				</div>
 			</div>
 		</div>
