Added FA to menubar loading

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -46,7 +46,7 @@
 					<div id="upcomingEvents">
 						<h3><i class="fa fa-clock-o"></i> Upcoming events</h3>
 						<ul id="upcomingEventList">
-							<li>Loading...</li>
+							<li><i class="fa fa-refresh fa-spin"></i> Loading...</li>
 						</ul>
 					</div>
 					
