--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -66,7 +66,9 @@
 							<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
 							<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
 							<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
+							<li><a href="http://schedules.dalton.org/" target="_blank"><i class="fa fa-calendar fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Schedules</a></li>
 						</ul>
+						<p><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i></p></a><a href="../etc/report.html" target="_blank"><i class="fa fa-terminal"></i></a></p>
 					</div>
 				</div>
 			</div>
