--- a/etc/options.html
+++ b/etc/options.html
@@ -320,7 +320,11 @@
 				<h3>Services</h3>
 				<p>Some services can be shown in the popup. You can pick which ones show up here.</p>
 				<div id="menubarServices">
+					Eligible services:
+					<ul id="menubarServicesEligible"></ul>
 
+					Uneligible services:
+					<ul id="menubarServicesUneligible"></ul>
 				</div>
 
 				<h3>Quick links</h3>
