Updated license and public beta

--- a/etc/options.html
+++ b/etc/options.html
@@ -370,8 +370,11 @@
 				<h3>Courses<strong>Plus</strong></h3>
 				<h4>version <span class="currentVersion"></span></h4>
 
+				<h2>Public Beta</h2>
+				<p>For more information on the public beta, please visit <a href="http://coursesplus.github.io/beta">http://coursesplus.github.io/beta</a>.</p>
+
 				<h2>Open-source software</h2>
-				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="https://github.com/CoursesPlus/CoursesPlus/raw/master/LICENSE.txt">MIT License</a>.
+				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="http://coursesplus.github.io/mitlicense/">MIT License</a>.
 
 				<p>Courses<strong>Plus</strong> also makes use of the following open-source projects:</p>
 				<ul>
