Add beta awareness

--- a/etc/options.html
+++ b/etc/options.html
@@ -15,6 +15,8 @@
 		<script type="text/javascript" src="../js/jquery.js"></script>
 		<script type="text/javascript" src="../js/jquery-ui.js"></script>
 		<script type="text/javascript" src="../js/bootstrap.min.js"></script>
+		<script type="text/javascript" src="../js/helpers.js"></script>
+		<script type="text/javascript" src="../js/consts.js"></script>
 		<script type="text/javascript" src="../js/components.js"></script>
 		<script type="text/javascript" src="../js/services.js"></script>
 		<script type="text/javascript" src="../js/themes.js"></script>
@@ -367,13 +369,13 @@
 				<p>Your unique ID is: <strong id="coursesplus-uniqueid">Loading...</strong></p>
 			</section>
 			<section id="about" class="page">
-				<h3>Courses<strong>Plus</strong></h3>
+				<h1>Courses<strong>Plus</strong></h1>
 				<h4>version <span class="currentVersion"></span></h4>
 
-				<h2>Public Beta</h2>
-				<p>For more information on the public beta, please visit <a href="http://coursesplus.github.io/beta">http://coursesplus.github.io/beta</a>.</p>
+				<h3 id="publicBeta">Public Beta</h3>
+				<p id="publicBetaDesc">For more information on the public beta, please visit <a href="http://coursesplus.github.io/beta">http://coursesplus.github.io/beta</a>.</p>
 
-				<h2>Open-source software</h2>
+				<h3>Open-source software</h3>
 				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="http://coursesplus.github.io/mitlicense/">MIT License</a>.
 
 				<p>Courses<strong>Plus</strong> also makes use of the following open-source projects:</p>
