Basic menubar service handling

--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -11,6 +11,7 @@
 		<script src="../js/jquery.js"></script>
 		<script src="../js/cpalloader.js"></script>
 		<script src="../js/coursesLib.js"></script>
+		<script src="../js/services.js"></script>
 		<script src="menubar.js"></script>
 
 		<style>
@@ -52,10 +53,9 @@
 					
 					<div id="services">
 						<h3><i class="fa fa-globe"></i> Services</h3>
-						Lunch Menu
-						Schedule
-						Wolfram|Alpha
-						Weather
+						<div id="serviceSpot">
+
+						</div>
 					</div>
 					
 					<div id="quickLinks">
