--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -24,6 +24,17 @@
 			.btn:hover {
 				background: rgb(56, 129, 192) !important;
 			}
+			.block {
+				border: solid 1px black;
+				border-radius: 5px;
+				margin-bottom: 5px;
+			}
+			.title > h2 {
+				font-size: 14px !important;
+				font-weight: bold;
+				padding-left: 5px;
+				margin-top: 5px;
+			}
 		</style>
 	</head>
 	<body>
