Updated loading pages

--- a/etc/coursesnew.html
+++ b/etc/coursesnew.html
@@ -18,6 +18,8 @@
 		<div id="page-content" style="overflow-x:hidden;">
 			<div id="loadingPage" class="page showing">
 				<i class="fa fa-4x fa-circle-o-notch fa-spin"></i>
+				<h1>Please Wait</h1>
+				<h6>Loading CoursesNew (Beta)</h6>
 			</div>
 			<div id="notLoggedInPage" class="page">
 				<h1>You're not logged in!</h1>
@@ -48,11 +50,11 @@
 				</div>
 			</div>
 		</div>
-		 
+
 		<div id="hamburger-icon" class="navbar">
 			<i class="fa fa-bars"></i>
 		</div>
-		 
+
 		<nav style="overflow-x:hidden;overflow-y:auto;">
 			<div id="userinfo">
 				<img id="username-img" src="" alt="User image" />
