--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -41,6 +41,8 @@
 		<div id="page-content">
 			<div id="loadingPage" class="page showing">
 				<i class="fa fa-4x fa-circle-o-notch fa-spin"></i>
+				<h1>Please Wait</h1>
+				<h6>Loading Menubar Extension</h6>
 			</div>
 			<div id="notLoggedInPage" class="page">
 				<h1>You're not logged in!</h1>
@@ -61,14 +63,14 @@
 							<li><i class="fa fa-refresh fa-spin"></i> Loading...</li>
 						</ul>
 					</div>
-					
+
 					<div id="services">
 						<h3><i class="fa fa-globe"></i> Services</h3>
 						<div id="serviceSpot">
 
 						</div>
 					</div>
-					
+
 					<div id="quickLinks">
 						<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
 						<ul>
