Updated some things.

--- a/etc/options.html
+++ b/etc/options.html
@@ -9,7 +9,7 @@
 		<link rel="stylesheet" href="../scss_gen/fonts.css" />
 		<link rel="stylesheet" href="options.css" />
 		<link rel="icon" href="../images/icon128.png">
-		
+
 		<script type="text/javascript" src="../js/cpal.js"></script>
 		<script type="text/javascript" src="../js/cpalloader.js"></script>
 		<script type="text/javascript" src="../js/jquery.js"></script>
@@ -54,7 +54,7 @@
 						<h4 class="modal-title">Options</h4>
 					</div>
 					<div class="modal-body">
-						
+
 					</div>
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Done</button>
@@ -127,7 +127,7 @@
 			transition: background-color .2s ease-in-out;
 		}
 		#left-pane > ul > li:not(:last-child) {
-			border-bottom: 1px solid black;			
+			border-bottom: 1px solid black;
 		}
 		#left-pane > ul > li:hover {
 			background-color: #eee;
@@ -229,7 +229,7 @@
 			<section id="theme" class="page">
 				<p>Themes are groups of pre-made settings you can apply to Courses. They change things like buttons, navigation bars, and other elements.</p>
 				<p>Themes is a beta feature and still under development. There may be glitches or other errors. If you find one, please email emails@coursesplus.tk!</p>
-				
+
 			</section>
 			<section id="page-options" class="page">
 				<h6>Background</h6>
@@ -383,7 +383,8 @@
 				<h3>Open-source software</h3>
 				<p>Courses<strong>Plus</strong> is open source software licensed under the <a href="http://coursesplus.github.io/mitlicense/">MIT License</a>.
 
-				<p>Courses<strong>Plus</strong> also makes use of the following open-source projects:</p>
+				<h3>Acknowledgements</h3>
+				<p>Courses<strong>Plus</strong> makes use of the following open-source projects:</p>
 				<ul>
 					<li><a href="https://jquery.com/">jQuery</a></li>
 					<li><a href="https://jqueryui.com/">jQuery UI</a></li>
@@ -392,6 +393,10 @@
 					<li><a href="https://github.com/snaptortoise/konami-js">Konami.js</a></li>
 					<li><a href="http://bootswatch.com">Bootswatch</a></li>
 				</ul>
+				<p>We would also like to thank the following people</p>
+				<ul>
+					<li>The Dalton School New Lab</li>
+					<li>The users of Courses<strong>Plus</strong></li>
 			</section>
 		</section>
 	</body>
