--- a/etc/bg.chrome.html
+++ b/etc/bg.chrome.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>Courses+ bg page</title>
+		<title>Courses+ Background Page</title>
 		<script src="../js/cpal.js"></script>
 		<script src="../js/cpal.chrome.js"></script>
 		<script src="bg.js"></script>
 	</head>
 	<body>
         <p>
-            There is nothing here except an unnecessary calculation. <br>
-            Pi = 3.141592653589793238462643383279502884197...
+            <a href="https://en.wikipedia.org/wiki/42_(number)"> The ultimate answer to life the universe and everything = 42. </a>
         </p>
 	</body>
 </html>
