--- a/etc/options.html
+++ b/etc/options.html
@@ -36,6 +36,7 @@
 						<p>Your changes are automatically saved.</p>
 						<p>Thanks to c20wb for the "CoursesPlus" and "DaltonCourses" logos.</p>
 						<div id="logoSelGallery">
+							<p>It looks like there was a Javascript problem. Try reloading the page</p>
 						</div>
 					</div>
 					<div class="modal-footer">
