--- a/etc/options.html
+++ b/etc/options.html
@@ -378,7 +378,7 @@
 				<h1>Courses<strong>Plus</strong></h1>
 				<h4>version <span class="currentVersion"></span></h4>
 
-				<h3 id="publicBeta">Public Beta</h3>
+				<h3 id="publicBeta">Join our Public Beta</h3>
 				<p id="publicBetaDesc">For more information on the public beta, please visit <a href="http://coursesplus.github.io/beta">http://coursesplus.github.io/beta</a>.</p>
 
 				<h3>Open-source software</h3>
