no one else makes services, why are these needed?

--- a/etc/options.html
+++ b/etc/options.html
@@ -43,8 +43,8 @@
 						<!--<button type="button" id="logoFromUrl" class="btn btn-info pull-left">From URL...</button>-->
 						<button type="button" class="btn btn-default" data-dismiss="modal">Done</button>
 					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal-dialog -->
+				</div>
+			</div>
 		</div>
 
 		<div id="serviceOptionsModal" class="modal fade">
@@ -60,8 +60,8 @@
 					<div class="modal-footer">
 						<button type="button" class="btn btn-default" data-dismiss="modal">Done</button>
 					</div>
-				</div><!-- /.modal-content -->
-			</div><!-- /.modal-dialog -->
+				</div>
+			</div>
 		</div>
 
 		<header>
