update logo for 2017 school year

--- a/etc/options.html
+++ b/etc/options.html
@@ -35,9 +35,7 @@
 						<p>Click on a logo to select it!</p>
 						<p>Your changes are automatically saved.</p>
 						<p>Thanks to c20wb for the "CoursesPlus" and "DaltonCourses" logos.</p>
-						<div id="logoSelGallery">
-							<p>It looks like there was a Javascript problem. Try reloading the page</p>
-						</div>
+						<div id="logoSelGallery"></div>
 					</div>
 					<div class="modal-footer">
 						<!--<button type="button" id="logoFromUrl" class="btn btn-info pull-left">From URL...</button>-->
