--- a/etc/disablemenu.html
+++ b/etc/disablemenu.html
@@ -7,7 +7,7 @@
 		<link rel="stylesheet" href="../scss_gen/fonts.css" />
 		<style>
 			body {
-				font-family: Oxygen, Helvetica, Arial, sans-serif !important;
+				font-family: "Lato", Helvetica, Arial, sans-serif !important;
 				font-size: 16px;
 				margin-left: 10px;
 				margin-right: 10px;
