--- a/etc/setup.html
+++ b/etc/setup.html
@@ -8,7 +8,7 @@
 		<style>
 			body {
 				padding-top: 100px;
-				font-family: "Oxygen", sans-serif;
+				font-family: "Lato", sans-serif;
 				font-size: 2em;
 				background: #fbfbfb;
 			}
