small changes to options page

--- a/etc/options.html
+++ b/etc/options.html
@@ -69,7 +69,7 @@
 		<section id="left-pane">
 			<ul id="pagelist">
 				<li data-page="theme">
-					<div class="section-name">Themes <sup>beta</sup></div>
+					<div class="section-name">Themes</div>
 					<div class="section-desc">Quickly change the look of Courses<strong>Plus</strong></div>
 				</li>
 				<li data-page="page-options">
@@ -77,7 +77,7 @@
 					<div class="section-desc">Change the look and feel of Courses<strong>Plus</strong>.</div>
 				</li>
 				<li data-page="menubar">
-					<div class="section-name">Menubar <sup>beta</sup></div>
+					<div class="section-name">Menubar</div>
 					<div class="section-desc">Modify what's shown on the Courses<strong>Plus</strong> menubar popup.</div>
 				</li>
 				<li data-page="features">
@@ -124,7 +124,7 @@
 			</section>
 			<section id="theme" class="page">
 				<p>Themes are groups of pre-made settings you can apply to Courses. They change things like buttons, navigation bars, and other elements.</p>
-				<p>Themes is a beta feature and still under development. There may be glitches or other errors. If you find one, please email emails@coursesplus.tk!</p>
+				<p>If you find an error or bug with a theme, please email emails@coursesplus.tk!</p>
 
 			</section>
 			<section id="page-options" class="page">
@@ -255,7 +255,7 @@
 					</ul>
 				</div>
 				<h4>Got an idea?</h4>
-				<p>Have an idea for a great new service - or any other feature you'd like to see? Send us an email at <a href="mailto:emails@coursesplus.tk">emails@coursesplus.tk</a>! Do you want to develop services? See <a href="https://trello.com/b/1FJCJDxW">here</a>!</p>
+				<p>Have an idea for a great new service - or any other feature you'd like to see? Send us an email at <a href="mailto:emails@coursesplus.tk">emails@coursesplus.tk</a>!</p>
 			</section>
 			<section id="storage" class="page">
 				<p>Using sync storage - if you sign into Chrome on more than one computer, your Courses<strong>Plus</strong> settings will sync between them!</p>
