--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -41,19 +41,16 @@
 		<div id="page-content">
 			<div id="loadingPage" class="page showing">
 				<i class="fa fa-4x fa-circle-o-notch fa-spin"></i>
-				<h1>Please Wait</h1>
-				<h6>Loading Menubar Extension</h6>
 			</div>
 			<div id="notLoggedInPage" class="page">
 				<h1>You're not logged in!</h1>
 				<h4>Log in on Courses and come back here.</h4>
 			</div>
 			<div id="welcomePage" class="page">
-				<h1>Welcome</h1>
-				<h4>Your upcoming events on Courses go up here.</h4>
-				<button id="soundsGood" class="btn btn-default btn-lg">Sounds good <i class="fa fa-smile-o"></i></button>
+				<h2>Your upcoming events on Courses go up here.</h2>
+				<button id="soundsGood" class="btn btn-default btn-lg">Sounds good</button>
 				<br />
-				<button id="noThanks" class="btn btn-info">No thanks <i class="fa fa-frown-o"></i></button>
+				<button id="noThanks" class="btn btn-info">No thanks</button>
 			</div>
 			<div id="mainPage" class="page">
 				<div class="content">
