--- a/etc/menubar.html
+++ b/etc/menubar.html
@@ -7,35 +7,13 @@
 		<link href="../css/font-awesome.min.css" rel="stylesheet" />
 		<link href="../css/simplegrid.css" rel="stylesheet" />
 		<link href="../scss_gen/hamburger.css" rel="stylesheet" />
+		<link href="menubar.css" rel="stylesheet" />
 
 		<script src="../js/jquery.js"></script>
 		<script src="../js/cpalloader.js"></script>
 		<script src="../js/coursesLib.js"></script>
 		<script src="../js/services.js"></script>
 		<script src="menubar.js"></script>
-
-		<style>
-			body, #page-content {
-				overflow-x: hidden;
-			}
-			#page-content {
-				padding-top: 20px;
-			}
-			.btn:hover {
-				background: rgb(56, 129, 192) !important;
-			}
-			.block {
-				border: solid 1px black;
-				border-radius: 5px;
-				margin-bottom: 5px;
-			}
-			.title > h2 {
-				font-size: 14px !important;
-				font-weight: bold;
-				padding-left: 5px;
-				margin-top: 5px;
-			}
-		</style>
 	</head>
 	<body>
 		<div id="page-content">
@@ -69,13 +47,13 @@
 					</div>
 
 					<div id="quickLinks">
-						<h3><i class="fa fa-link"></i> Quick<strong>Links</strong></h3>
+						<h3><i class="fa fa-link"></i> Quick links</h3>
 						<ul>
-							<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Go to Courses</a></li>
-							<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Upcoming Events</a></li>
-							<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Courses<strong>Plus</strong> Options</a></li>
-							<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;gDocs</a></li>
-							<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i>&nbsp;&nbsp;&nbsp;&nbsp;Disable this pop up</p></a></li>
+							<li><a href="https://courses.dalton.org/" target="_blank"><i class="fa fa-external-link fa-fw"></i>Go to Courses</a></li>
+							<li><a href="https://courses2015.dalton.org/calendar/view.php" target="_blank"><i class="fa fa-clock-o fa-fw"></i>Upcoming Events</a></li>
+							<li><a href="../etc/options.html" target="_blank"><i class="fa fa-gear fa-fw"></i>Courses<strong>Plus</strong> Options</a></li>
+							<li><a href="http://gdocs.dalton.org" target="_blank"><i class="fa fa-file-text-o fa-fw"></i>gDocs</a></li>
+							<li><a href="../etc/disablemenu.html" target="_blank"><i class="fa fa-ban fa-fw"></i>Disable this pop up</p></a></li>
 						</ul>
 					</div>
 				</div>
